--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,106 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.5672dbb4aed574320944.hot-update.js": "/js/app.5672dbb4aed574320944.hot-update.js",
+    "/js/app.a2ee39c6019433a375fe.hot-update.js": "/js/app.a2ee39c6019433a375fe.hot-update.js",
+    "/js/app.31f8680e4fbad32f4ed0.hot-update.js": "/js/app.31f8680e4fbad32f4ed0.hot-update.js",
+    "/js/app.2cfd2ff740a4b34666a2.hot-update.js": "/js/app.2cfd2ff740a4b34666a2.hot-update.js",
+    "/js/app.6a95bfaf99cde7f349de.hot-update.js": "/js/app.6a95bfaf99cde7f349de.hot-update.js",
+    "/js/app.2afdb2a6c819b991c4ce.hot-update.js": "/js/app.2afdb2a6c819b991c4ce.hot-update.js",
+    "/js/app.7c5d122f068e92ed65cc.hot-update.js": "/js/app.7c5d122f068e92ed65cc.hot-update.js",
+    "/js/app.b40526fce93051ca9c6a.hot-update.js": "/js/app.b40526fce93051ca9c6a.hot-update.js",
+    "/js/app.095b20802c7f22745221.hot-update.js": "/js/app.095b20802c7f22745221.hot-update.js",
+    "/js/app.20635bd6f42dd24da33a.hot-update.js": "/js/app.20635bd6f42dd24da33a.hot-update.js",
+    "/js/app.5be95cc0f99495845237.hot-update.js": "/js/app.5be95cc0f99495845237.hot-update.js",
+    "/js/app.5305876f9df703c8daca.hot-update.js": "/js/app.5305876f9df703c8daca.hot-update.js",
+    "/js/app.768b2be8d0fd4023fa40.hot-update.js": "/js/app.768b2be8d0fd4023fa40.hot-update.js",
+    "/js/app.2f2f93d4104266a32e37.hot-update.js": "/js/app.2f2f93d4104266a32e37.hot-update.js",
+    "/js/app.5fbe2bc833ec08dfddd7.hot-update.js": "/js/app.5fbe2bc833ec08dfddd7.hot-update.js",
+    "/js/app.c30212bd48f688e21cb4.hot-update.js": "/js/app.c30212bd48f688e21cb4.hot-update.js",
+    "/js/app.4accb56dcc0e88686971.hot-update.js": "/js/app.4accb56dcc0e88686971.hot-update.js",
+    "/js/app.43c56b3164bdb8819b21.hot-update.js": "/js/app.43c56b3164bdb8819b21.hot-update.js",
+    "/js/app.cad73939a9e52bf000f5.hot-update.js": "/js/app.cad73939a9e52bf000f5.hot-update.js",
+    "/js/app.109b4429a777c5a5a8cb.hot-update.js": "/js/app.109b4429a777c5a5a8cb.hot-update.js",
+    "/js/app.0f37a7eeb30f21106042.hot-update.js": "/js/app.0f37a7eeb30f21106042.hot-update.js",
+    "/js/app.9d21070d47e97c820fa9.hot-update.js": "/js/app.9d21070d47e97c820fa9.hot-update.js",
+    "/js/app.960002eb3917d116a187.hot-update.js": "/js/app.960002eb3917d116a187.hot-update.js",
+    "/js/app.4c7fc71f508eacb76ce8.hot-update.js": "/js/app.4c7fc71f508eacb76ce8.hot-update.js",
+    "/js/app.f5855c4ac598fb8a95f1.hot-update.js": "/js/app.f5855c4ac598fb8a95f1.hot-update.js",
+    "/js/app.7fe467fc44974eacf44e.hot-update.js": "/js/app.7fe467fc44974eacf44e.hot-update.js",
+    "/js/app.e397ea0eb57f256e7a67.hot-update.js": "/js/app.e397ea0eb57f256e7a67.hot-update.js",
+    "/js/app.6719a7687413c3b9c91f.hot-update.js": "/js/app.6719a7687413c3b9c91f.hot-update.js",
+    "/js/app.3c9f54ab7a2fb8c41743.hot-update.js": "/js/app.3c9f54ab7a2fb8c41743.hot-update.js",
+    "/js/app.8d7db64fd265edd40446.hot-update.js": "/js/app.8d7db64fd265edd40446.hot-update.js",
+    "/js/app.8043ca1cb03155a1c702.hot-update.js": "/js/app.8043ca1cb03155a1c702.hot-update.js",
+    "/js/app.d00eeaeac417e857a722.hot-update.js": "/js/app.d00eeaeac417e857a722.hot-update.js",
+    "/js/app.daf61f0755f7344e7a20.hot-update.js": "/js/app.daf61f0755f7344e7a20.hot-update.js",
+    "/js/app.a4fc568d2e3446de1a56.hot-update.js": "/js/app.a4fc568d2e3446de1a56.hot-update.js",
+    "/js/app.223a05bd898ccbb0db8d.hot-update.js": "/js/app.223a05bd898ccbb0db8d.hot-update.js",
+    "/js/app.90fc65514d2f8c73bfe0.hot-update.js": "/js/app.90fc65514d2f8c73bfe0.hot-update.js",
+    "/js/app.5f4c9f24672131ef9124.hot-update.js": "/js/app.5f4c9f24672131ef9124.hot-update.js",
+    "/js/app.b81c2f9029110516958c.hot-update.js": "/js/app.b81c2f9029110516958c.hot-update.js",
+    "/js/app.14f12621028e244bdff8.hot-update.js": "/js/app.14f12621028e244bdff8.hot-update.js",
+    "/js/app.ad1ab501a59cc550779a.hot-update.js": "/js/app.ad1ab501a59cc550779a.hot-update.js",
+    "/js/app.2ed2b8ac019c3c83a75c.hot-update.js": "/js/app.2ed2b8ac019c3c83a75c.hot-update.js",
+    "/js/app.386ce94cfcbdaf8a2e2a.hot-update.js": "/js/app.386ce94cfcbdaf8a2e2a.hot-update.js",
+    "/js/app.58b04dc800594a5abd5a.hot-update.js": "/js/app.58b04dc800594a5abd5a.hot-update.js",
+    "/js/app.444dbb1587ae813d91e8.hot-update.js": "/js/app.444dbb1587ae813d91e8.hot-update.js",
+    "/js/app.b5436a9d2ed04343d7b6.hot-update.js": "/js/app.b5436a9d2ed04343d7b6.hot-update.js",
+    "/js/app.5e922a1f19dc2497fb1b.hot-update.js": "/js/app.5e922a1f19dc2497fb1b.hot-update.js",
+    "/js/app.3de5a5195c8bb6866c76.hot-update.js": "/js/app.3de5a5195c8bb6866c76.hot-update.js",
+    "/js/app.2d3a2e779409cfa05e84.hot-update.js": "/js/app.2d3a2e779409cfa05e84.hot-update.js",
+    "/js/app.7fc3c68488db05e84b7e.hot-update.js": "/js/app.7fc3c68488db05e84b7e.hot-update.js",
+    "/js/app.ecf706fd323380caf778.hot-update.js": "/js/app.ecf706fd323380caf778.hot-update.js",
+    "/js/app.020ae24bff73541a7ca5.hot-update.js": "/js/app.020ae24bff73541a7ca5.hot-update.js",
+    "/js/app.733ae8b0068b45e7903a.hot-update.js": "/js/app.733ae8b0068b45e7903a.hot-update.js",
+    "/js/app.e719243825bcc1600047.hot-update.js": "/js/app.e719243825bcc1600047.hot-update.js",
+    "/js/app.07f0538354ad721a2089.hot-update.js": "/js/app.07f0538354ad721a2089.hot-update.js",
+    "/js/app.1b02acf9075b32c54737.hot-update.js": "/js/app.1b02acf9075b32c54737.hot-update.js",
+    "/js/app.567dab1b7dcad82cfd6a.hot-update.js": "/js/app.567dab1b7dcad82cfd6a.hot-update.js",
+    "/js/app.3199d200ef861f31e057.hot-update.js": "/js/app.3199d200ef861f31e057.hot-update.js",
+    "/js/app.38e7fc3ad46e4ae9e01a.hot-update.js": "/js/app.38e7fc3ad46e4ae9e01a.hot-update.js",
+    "/js/app.5d7b823ae9d64078d353.hot-update.js": "/js/app.5d7b823ae9d64078d353.hot-update.js",
+    "/js/app.cbed108fb772ed37ce70.hot-update.js": "/js/app.cbed108fb772ed37ce70.hot-update.js",
+    "/js/app.5a88430088fccc80759a.hot-update.js": "/js/app.5a88430088fccc80759a.hot-update.js",
+    "/js/app.2db782df3a13fa54a537.hot-update.js": "/js/app.2db782df3a13fa54a537.hot-update.js",
+    "/js/app.15b7fef43d32bc4b36d0.hot-update.js": "/js/app.15b7fef43d32bc4b36d0.hot-update.js",
+    "/js/app.11ad40b5f6a5b41836c4.hot-update.js": "/js/app.11ad40b5f6a5b41836c4.hot-update.js",
+    "/js/app.d065ddc734ed9ef525fe.hot-update.js": "/js/app.d065ddc734ed9ef525fe.hot-update.js",
+    "/js/app.f8ed91d7ff9da498fc89.hot-update.js": "/js/app.f8ed91d7ff9da498fc89.hot-update.js",
+    "/js/app.f7588fbc6328329e92f5.hot-update.js": "/js/app.f7588fbc6328329e92f5.hot-update.js",
+    "/js/app.d09fa24b0932308689c8.hot-update.js": "/js/app.d09fa24b0932308689c8.hot-update.js",
+    "/js/app.b698e0b2d71c335c97b6.hot-update.js": "/js/app.b698e0b2d71c335c97b6.hot-update.js",
+    "/js/app.80dac7f412a5c5f41804.hot-update.js": "/js/app.80dac7f412a5c5f41804.hot-update.js",
+    "/js/app.ba36702a9a50ba501110.hot-update.js": "/js/app.ba36702a9a50ba501110.hot-update.js",
+    "/js/app.96a242800c89f117cd23.hot-update.js": "/js/app.96a242800c89f117cd23.hot-update.js",
+    "/js/app.26a718fad0fef4a5066f.hot-update.js": "/js/app.26a718fad0fef4a5066f.hot-update.js",
+    "/js/app.1a9a7df6a78101c2e7f9.hot-update.js": "/js/app.1a9a7df6a78101c2e7f9.hot-update.js",
+    "/js/app.8ad3a94efd66c28b44ca.hot-update.js": "/js/app.8ad3a94efd66c28b44ca.hot-update.js",
+    "/js/app.ab60652dced720e67899.hot-update.js": "/js/app.ab60652dced720e67899.hot-update.js",
+    "/js/app.995b5822cbe8a151e149.hot-update.js": "/js/app.995b5822cbe8a151e149.hot-update.js",
+    "/js/app.7733b1a8e482ec37d5f3.hot-update.js": "/js/app.7733b1a8e482ec37d5f3.hot-update.js",
+    "/js/app.b186833906168f5840de.hot-update.js": "/js/app.b186833906168f5840de.hot-update.js",
+    "/js/app.df2395e13551c921f43c.hot-update.js": "/js/app.df2395e13551c921f43c.hot-update.js",
+    "/js/app.5b0f7dcb3f433150d7a1.hot-update.js": "/js/app.5b0f7dcb3f433150d7a1.hot-update.js",
+    "/js/app.f664efe16e7207b90781.hot-update.js": "/js/app.f664efe16e7207b90781.hot-update.js",
+    "/js/app.ff227fe92dd3e1397ea7.hot-update.js": "/js/app.ff227fe92dd3e1397ea7.hot-update.js",
+    "/js/app.41b4cbe8705759090267.hot-update.js": "/js/app.41b4cbe8705759090267.hot-update.js",
+    "/js/app.32957a10c330e9a24f3d.hot-update.js": "/js/app.32957a10c330e9a24f3d.hot-update.js",
+    "/js/app.dbff4a975aecb811abb4.hot-update.js": "/js/app.dbff4a975aecb811abb4.hot-update.js",
+    "/js/app.3e965b5ba21df3ae1814.hot-update.js": "/js/app.3e965b5ba21df3ae1814.hot-update.js",
+    "/js/app.3d310abc4acd8be4872b.hot-update.js": "/js/app.3d310abc4acd8be4872b.hot-update.js",
+    "/js/app.072d9a8fa0550e4db8fa.hot-update.js": "/js/app.072d9a8fa0550e4db8fa.hot-update.js",
+    "/js/app.ce2307802009c7238c7f.hot-update.js": "/js/app.ce2307802009c7238c7f.hot-update.js",
+    "/js/app.b16d4e244d38dc0c046e.hot-update.js": "/js/app.b16d4e244d38dc0c046e.hot-update.js",
+    "/js/app.891d39a47e64c42a9afd.hot-update.js": "/js/app.891d39a47e64c42a9afd.hot-update.js",
+    "/js/app.2ca173b42eb89f4982ef.hot-update.js": "/js/app.2ca173b42eb89f4982ef.hot-update.js",
+    "/js/app.1dbcc76e11d4fb9a3f11.hot-update.js": "/js/app.1dbcc76e11d4fb9a3f11.hot-update.js",
+    "/js/app.bd41bfa5f87e95730017.hot-update.js": "/js/app.bd41bfa5f87e95730017.hot-update.js",
+    "/js/app.f24f28cd3a036946c394.hot-update.js": "/js/app.f24f28cd3a036946c394.hot-update.js",
+    "/js/app.306b8e973563ddff7e9a.hot-update.js": "/js/app.306b8e973563ddff7e9a.hot-update.js",
+    "/js/app.2f4a6b8488d6090aec87.hot-update.js": "/js/app.2f4a6b8488d6090aec87.hot-update.js",
+    "/js/app.7f54570850b2624a8acb.hot-update.js": "/js/app.7f54570850b2624a8acb.hot-update.js",
+    "/js/app.8cdae563bc895a129bc0.hot-update.js": "/js/app.8cdae563bc895a129bc0.hot-update.js",
+    "/js/app.3ffb4e65d4d558035aa7.hot-update.js": "/js/app.3ffb4e65d4d558035aa7.hot-update.js",
+    "/js/app.6fa58e932c12e6e2d455.hot-update.js": "/js/app.6fa58e932c12e6e2d455.hot-update.js"
 }
