--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.42bd82eb0f5dd156392a.hot-update.js": "/js/app.42bd82eb0f5dd156392a.hot-update.js",
+    "/js/app.cb4947aca4c59ea3f699.hot-update.js": "/js/app.cb4947aca4c59ea3f699.hot-update.js"
 }
