--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.c66e8ad746fcf5dcb24d.hot-update.js": "/js/app.c66e8ad746fcf5dcb24d.hot-update.js",
+    "/js/app.8dfb5f49e60ccd255fe1.hot-update.js": "/js/app.8dfb5f49e60ccd255fe1.hot-update.js",
+    "/js/app.3222945bb7cdd9ff265e.hot-update.js": "/js/app.3222945bb7cdd9ff265e.hot-update.js",
+    "/js/app.0957594e739e4eb64abd.hot-update.js": "/js/app.0957594e739e4eb64abd.hot-update.js"
 }
