--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,94 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.26972e516d4bb4056945.hot-update.js": "/js/app.26972e516d4bb4056945.hot-update.js",
+    "/js/app.c8ddf93e76a41ee0ce46.hot-update.js": "/js/app.c8ddf93e76a41ee0ce46.hot-update.js",
+    "/js/app.995056f3b5b401c8b7e2.hot-update.js": "/js/app.995056f3b5b401c8b7e2.hot-update.js",
+    "/js/app.6b68572f0e91ab11ee03.hot-update.js": "/js/app.6b68572f0e91ab11ee03.hot-update.js",
+    "/js/app.94fb86fd54eba0a315e2.hot-update.js": "/js/app.94fb86fd54eba0a315e2.hot-update.js",
+    "/js/app.eecff300d951b5ef82d7.hot-update.js": "/js/app.eecff300d951b5ef82d7.hot-update.js",
+    "/js/app.500001642d5326861900.hot-update.js": "/js/app.500001642d5326861900.hot-update.js",
+    "/js/app.131fe7a8bcd241b260ad.hot-update.js": "/js/app.131fe7a8bcd241b260ad.hot-update.js",
+    "/js/app.a31d06578418a492748d.hot-update.js": "/js/app.a31d06578418a492748d.hot-update.js",
+    "/js/app.b7e92bab90d47936f9e6.hot-update.js": "/js/app.b7e92bab90d47936f9e6.hot-update.js",
+    "/js/app.dc25ba0b2e9bfa785c9f.hot-update.js": "/js/app.dc25ba0b2e9bfa785c9f.hot-update.js",
+    "/js/app.1d7b017eefd7a5457bb8.hot-update.js": "/js/app.1d7b017eefd7a5457bb8.hot-update.js",
+    "/js/app.95c937791a66b995373a.hot-update.js": "/js/app.95c937791a66b995373a.hot-update.js",
+    "/js/app.5deb5462310de824ef2d.hot-update.js": "/js/app.5deb5462310de824ef2d.hot-update.js",
+    "/js/app.27f71f4b40433331cf73.hot-update.js": "/js/app.27f71f4b40433331cf73.hot-update.js",
+    "/js/app.3a9615e5f95fa14ee837.hot-update.js": "/js/app.3a9615e5f95fa14ee837.hot-update.js",
+    "/js/app.4fbf5f5217993dd85cc7.hot-update.js": "/js/app.4fbf5f5217993dd85cc7.hot-update.js",
+    "/js/app.40c2dccc45299ae4c5c2.hot-update.js": "/js/app.40c2dccc45299ae4c5c2.hot-update.js",
+    "/js/app.045d1e5374aa63a153e8.hot-update.js": "/js/app.045d1e5374aa63a153e8.hot-update.js",
+    "/js/app.c80935c3f1e802fc42db.hot-update.js": "/js/app.c80935c3f1e802fc42db.hot-update.js",
+    "/js/app.748e25601613127f96cb.hot-update.js": "/js/app.748e25601613127f96cb.hot-update.js",
+    "/js/app.eed88906da414de0fc3c.hot-update.js": "/js/app.eed88906da414de0fc3c.hot-update.js",
+    "/js/app.ff3b01e0995382e158cf.hot-update.js": "/js/app.ff3b01e0995382e158cf.hot-update.js",
+    "/js/app.22444d889d3bb52173f0.hot-update.js": "/js/app.22444d889d3bb52173f0.hot-update.js",
+    "/js/app.5e2e87f3a4d92fee20c7.hot-update.js": "/js/app.5e2e87f3a4d92fee20c7.hot-update.js",
+    "/js/app.235429e46e546c7f6863.hot-update.js": "/js/app.235429e46e546c7f6863.hot-update.js",
+    "/js/app.13f2413d5bcec21487f9.hot-update.js": "/js/app.13f2413d5bcec21487f9.hot-update.js",
+    "/js/app.19d5b157e88451392c2d.hot-update.js": "/js/app.19d5b157e88451392c2d.hot-update.js",
+    "/js/app.c8ccee979ca9ac6a57dc.hot-update.js": "/js/app.c8ccee979ca9ac6a57dc.hot-update.js",
+    "/js/app.3b462ffcfe7ccf6809e8.hot-update.js": "/js/app.3b462ffcfe7ccf6809e8.hot-update.js",
+    "/js/app.212b39759d5017556036.hot-update.js": "/js/app.212b39759d5017556036.hot-update.js",
+    "/js/app.afd5bc251a3783dbce2b.hot-update.js": "/js/app.afd5bc251a3783dbce2b.hot-update.js",
+    "/js/app.b576d15268e2b30af511.hot-update.js": "/js/app.b576d15268e2b30af511.hot-update.js",
+    "/js/app.3ac8e2a954f10c341bbf.hot-update.js": "/js/app.3ac8e2a954f10c341bbf.hot-update.js",
+    "/js/app.88f090fee5df5eefec67.hot-update.js": "/js/app.88f090fee5df5eefec67.hot-update.js",
+    "/js/app.30bbfaed1f4112527ea0.hot-update.js": "/js/app.30bbfaed1f4112527ea0.hot-update.js",
+    "/js/app.216bc9a6e693f6c254e9.hot-update.js": "/js/app.216bc9a6e693f6c254e9.hot-update.js",
+    "/js/app.b40b5c8e4edede18de96.hot-update.js": "/js/app.b40b5c8e4edede18de96.hot-update.js",
+    "/js/app.0ac6d2e62fafeb0806ae.hot-update.js": "/js/app.0ac6d2e62fafeb0806ae.hot-update.js",
+    "/js/app.344ebebbf4e20b08ab00.hot-update.js": "/js/app.344ebebbf4e20b08ab00.hot-update.js",
+    "/js/app.64c3d6924df13a7305ca.hot-update.js": "/js/app.64c3d6924df13a7305ca.hot-update.js",
+    "/js/app.798cfb365a5242bd9bef.hot-update.js": "/js/app.798cfb365a5242bd9bef.hot-update.js",
+    "/js/app.f2b6fba371c5acf2a2aa.hot-update.js": "/js/app.f2b6fba371c5acf2a2aa.hot-update.js",
+    "/js/app.4eb619374c1ef9dd7a4c.hot-update.js": "/js/app.4eb619374c1ef9dd7a4c.hot-update.js",
+    "/js/app.c56ecc1e568a270e5c35.hot-update.js": "/js/app.c56ecc1e568a270e5c35.hot-update.js",
+    "/js/app.3cc6f140695bea2a5705.hot-update.js": "/js/app.3cc6f140695bea2a5705.hot-update.js",
+    "/js/app.2942c2052f0165d216e3.hot-update.js": "/js/app.2942c2052f0165d216e3.hot-update.js",
+    "/js/app.764cd9d59f6dc7fe994d.hot-update.js": "/js/app.764cd9d59f6dc7fe994d.hot-update.js",
+    "/js/app.a2c1567f86da6f112188.hot-update.js": "/js/app.a2c1567f86da6f112188.hot-update.js",
+    "/js/app.63ddae1d80ea9f22afe8.hot-update.js": "/js/app.63ddae1d80ea9f22afe8.hot-update.js",
+    "/js/app.869249f3c7326fc892b5.hot-update.js": "/js/app.869249f3c7326fc892b5.hot-update.js",
+    "/js/app.8ce266d68ff64f889668.hot-update.js": "/js/app.8ce266d68ff64f889668.hot-update.js",
+    "/js/app.f22c40e9d81cdf52f02a.hot-update.js": "/js/app.f22c40e9d81cdf52f02a.hot-update.js",
+    "/js/app.b8412e435a4de1ca2fc0.hot-update.js": "/js/app.b8412e435a4de1ca2fc0.hot-update.js",
+    "/js/app.49c4e865597f7af308ec.hot-update.js": "/js/app.49c4e865597f7af308ec.hot-update.js",
+    "/js/app.fe44dde12dd8f96ba702.hot-update.js": "/js/app.fe44dde12dd8f96ba702.hot-update.js",
+    "/js/app.677ea0afde3cee7e318a.hot-update.js": "/js/app.677ea0afde3cee7e318a.hot-update.js",
+    "/js/app.6d8004592afad2d9d540.hot-update.js": "/js/app.6d8004592afad2d9d540.hot-update.js",
+    "/js/app.47cdaef6e6ba83e573c9.hot-update.js": "/js/app.47cdaef6e6ba83e573c9.hot-update.js",
+    "/js/app.3f318dbc06d84b090cec.hot-update.js": "/js/app.3f318dbc06d84b090cec.hot-update.js",
+    "/js/app.6b7aad490f94831b756d.hot-update.js": "/js/app.6b7aad490f94831b756d.hot-update.js",
+    "/js/app.8fd447a5ac99561ad969.hot-update.js": "/js/app.8fd447a5ac99561ad969.hot-update.js",
+    "/js/app.3550d5d523bef505ceb6.hot-update.js": "/js/app.3550d5d523bef505ceb6.hot-update.js",
+    "/js/app.7399c011bfd312f2be64.hot-update.js": "/js/app.7399c011bfd312f2be64.hot-update.js",
+    "/js/app.c8e2591ff3672b855454.hot-update.js": "/js/app.c8e2591ff3672b855454.hot-update.js",
+    "/js/app.b4d593b039efcb793480.hot-update.js": "/js/app.b4d593b039efcb793480.hot-update.js",
+    "/js/app.aa17ee6c414290727ab3.hot-update.js": "/js/app.aa17ee6c414290727ab3.hot-update.js",
+    "/js/app.2e33ba66bb5c36afa240.hot-update.js": "/js/app.2e33ba66bb5c36afa240.hot-update.js",
+    "/js/app.f157c608b1c6928ca4c3.hot-update.js": "/js/app.f157c608b1c6928ca4c3.hot-update.js",
+    "/js/app.353e51e19c4d1146ff55.hot-update.js": "/js/app.353e51e19c4d1146ff55.hot-update.js",
+    "/js/app.159bb290514f87a069b8.hot-update.js": "/js/app.159bb290514f87a069b8.hot-update.js",
+    "/js/app.5da44f86a140fa1ea2d9.hot-update.js": "/js/app.5da44f86a140fa1ea2d9.hot-update.js",
+    "/js/app.6689078aaca833504966.hot-update.js": "/js/app.6689078aaca833504966.hot-update.js",
+    "/js/app.e03a19eb2114576c64ba.hot-update.js": "/js/app.e03a19eb2114576c64ba.hot-update.js",
+    "/js/app.39429380596380054cd6.hot-update.js": "/js/app.39429380596380054cd6.hot-update.js",
+    "/js/app.1a00d4d8c4244648cc38.hot-update.js": "/js/app.1a00d4d8c4244648cc38.hot-update.js",
+    "/js/app.ca5f0688805e5bcbd416.hot-update.js": "/js/app.ca5f0688805e5bcbd416.hot-update.js",
+    "/js/app.a0b22e27b0f5154b1a1e.hot-update.js": "/js/app.a0b22e27b0f5154b1a1e.hot-update.js",
+    "/js/app.c95dba243e5851bec559.hot-update.js": "/js/app.c95dba243e5851bec559.hot-update.js",
+    "/js/app.cd7ca151a610f4950f6a.hot-update.js": "/js/app.cd7ca151a610f4950f6a.hot-update.js",
+    "/js/app.d034a7c4fed400f86bc4.hot-update.js": "/js/app.d034a7c4fed400f86bc4.hot-update.js",
+    "/js/app.e9d6d092a975b2a985d9.hot-update.js": "/js/app.e9d6d092a975b2a985d9.hot-update.js",
+    "/js/app.e6d238ee07f92da89b0e.hot-update.js": "/js/app.e6d238ee07f92da89b0e.hot-update.js",
+    "/js/app.6980d551026d7a85169a.hot-update.js": "/js/app.6980d551026d7a85169a.hot-update.js",
+    "/js/app.c6bb2fa7b8a712cd35d1.hot-update.js": "/js/app.c6bb2fa7b8a712cd35d1.hot-update.js",
+    "/js/app.3d358d571affa3e1c998.hot-update.js": "/js/app.3d358d571affa3e1c998.hot-update.js",
+    "/js/app.959fc87d2c5e28e3d6a3.hot-update.js": "/js/app.959fc87d2c5e28e3d6a3.hot-update.js",
+    "/js/app.25a409c94ddf633b2b92.hot-update.js": "/js/app.25a409c94ddf633b2b92.hot-update.js",
+    "/js/app.9ac0e795ee47c0710be1.hot-update.js": "/js/app.9ac0e795ee47c0710be1.hot-update.js",
+    "/js/app.6f148b5f7a8199e47ff5.hot-update.js": "/js/app.6f148b5f7a8199e47ff5.hot-update.js"
 }
